fixing some issus with files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background: url("img/mpob.jpg") no-repeat;
+    background: url("../img/mpob.jpg") no-repeat;
     background-size: cover;
     background-position: center;
  }
