--- a/style.css
+++ b/style.css
@@ -6,15 +6,7 @@
 }
 
 
-body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url("assets/css/img/mpob.jpg");
-    background-size: cover;
-    background-position: center;
-}
+
  body {
     display: flex;
     justify-content: center;
@@ -32,7 +24,6 @@ header {
     left: 0;
     width: 100%;
     padding: 20px 100px;
-    
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,8 +48,8 @@ header {
 }
 
 
-.navigation a::after {
-    content: " ";
+.navigation a::after {   /* هذا تحديد التركيز  */
+    content: " "; 
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -67,11 +58,11 @@ header {
     background: #fff;
     border-radius: 5px;
     transform-origin: right;
-    transform: scale(0);
+    transform: scaleX(0);
     transition: transform .5s;
 }
 
-.navigation a:hover ::after {
+.navigation a:hover::after {
     transform-origin: left;
     transform: scaleX(1);
 
@@ -119,6 +110,8 @@ header {
     padding: 40px;
 }
 
+
+
 .wrapper icon-close {
     position: absolute;
     top: 0;
@@ -137,7 +130,7 @@ header {
 }
 
 
-.form-box {
+.form-box h2{
     font-size: 2em;
     color: #162938;
     text-align: center;
